--- a/client/src/app/component/ft-dialog/ft-dialog.component.less
+++ b/client/src/app/component/ft-dialog/ft-dialog.component.less
@@ -39,12 +39,17 @@
     }
 }
 
-p-tabview {
+p-tabview, .footer {
     position: absolute;
     top: 50px;
-    bottom: 10px;
+    bottom: 60px;
     left: 10px;
     right: 10px;
+}
+
+.footer {
+    top: auto;
+    bottom: 15px;
 }
 
 .ui-tabview {
