--- a/client/src/assets/less/theme.less
+++ b/client/src/assets/less/theme.less
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+/*
+@import '../../../node_modules/primeng/resources/themes/nova-colored/theme.css';
+@import '../../../node_modules/primeng/resources/primeng.min.css';
+*/
 
 // Color variables (appears count calculates by raw css)
 @color0: #ffffff; // Appears 38 times
@@ -402,7 +406,6 @@ a {
 	box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.16);
 	display: flex;
 	flex-direction: column;
-	max-height: 0;
 	padding: 0;
 	padding: 0;
 	pointer-events: auto;
@@ -410,14 +413,11 @@ a {
 
 	.ui-dialog-content {
 		background-color: @color0;
-		background: 0;
-		border: 0;
 		border: 1px solid @color4;
 		color: @color1;
 		overflow-y: auto;
-		padding: 0.571em 1em;
-		padding: 0.5em 0.75em;
 		position: relative;
+		padding: 1em 2em;
 	}
 
 	.ui-dialog-footer {
@@ -435,6 +435,50 @@ a {
 			width: auto;
 		}
 	}
+
+	.ui-dialog-titlebar {
+		border: 1px solid #007ad9;
+		background-color: #007ad9;
+		color: #ffffff;
+		padding: 1em;
+		font-weight: 700;
+		border-bottom: 0 none;
+	}
+
+	.ui-dialog-title {
+		margin: 0;
+		float: none;
+	}
+
+	.ui-dialog-titlebar-icons {
+		float: right;
+	}
+
+	.ui-dialog-titlebar-icon {
+		display: inline-block;
+		color: #ffffff;
+		border: 0 none;
+		padding: 0;
+		margin-left: 0.5em;
+		transition: color 0.2s, background-color 0.2s, box-shadow 0.2s;
+	}
+}
+
+.ui-dialog-visible {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.ui-confirmdialog {
+	width: 30em;
+}
+
+.ui-confirmdialog-icon {
+	font-size: 1.5em;
+	margin-right: .5em;
+	position: relative;
+	top: .2em;
 }
 
 .ui-overlaypanel {
@@ -769,73 +813,6 @@ input[type=submit] {
 			border-color: transparent;
 			color: @color11;
 		}
-	}
-}
-
-.ui-dialog-mask {
-	display: none;
-	height: @height5;
-	left: 0;
-	pointer-events: none;
-	position: fixed;
-	top: 0;
-	width: @width9;
-}
-
-.ui-dialog-mask.ui-widget-overlay {
-	pointer-events: auto;
-}
-
-.ui-dialog-resizable {
-	.ui-dialog-content {
-		overflow: auto;
-	}
-}
-
-.ui-dialog-footer {
-	border-width: 1px 0 0;
-	flex-shrink: 0;
-	padding: 1em;
-	text-align: right;
-
-	.ui-button {
-		margin-right: 0.25em;
-	}
-}
-
-.ui-dialog-bottom {
-	align-items: flex-end;
-
-	.ui-dialog {
-		margin: 0.75em;
-		position: relative;
-	}
-}
-
-.ui-dialog-left {
-	justify-content: flex-start;
-
-	.ui-dialog {
-		margin: 0.75em;
-		position: relative;
-	}
-}
-
-.ui-dialog-right {
-	justify-content: flex-end;
-
-	.ui-dialog {
-		margin: 0.75em;
-		position: relative;
-	}
-}
-
-.ui-dialog-top {
-	align-items: flex-start;
-
-	.ui-dialog {
-		margin: 0.75em;
-		position: relative;
 	}
 }
 
@@ -1305,12 +1282,10 @@ input[type=submit] {
 
 			a {
 				background: @color0;
-				border: solid @color10;
-				border-color: transparent transparent @color10 transparent;
+				border: solid transparent;
 				border-width: 0 0 2px 0;
 				color: #6c757d;
 				display: flex;
-				margin: 0 0 -2px 0;
 				padding: 1rem;
 				transition: box-shadow 0.2s;
 
