--- a/client/src/assets/less/theme.less
+++ b/client/src/assets/less/theme.less
@@ -115,6 +115,7 @@ a {
 	position: absolute;
 	top: 0;
 	width: @width9;
+	display: none;
 }
 
 .ui-widget-content {
@@ -1262,6 +1263,9 @@ input[type=submit] {
 	padding: 0.25em;
 
 	.ui-tabview-panels {
+		position: relative;
+		width: 100%;
+		height: 100%;
 		background-color: @color0;
 		border-width: 0 1px 1px 1px;
 		border: 1px solid @color4;
