fixed save address

--- a/client/src/app/component/ft-dialog/ft-dialog.component.less
+++ b/client/src/app/component/ft-dialog/ft-dialog.component.less
@@ -51,7 +51,7 @@ p-tabview {
     height: calc(100% - 40px); /* Tab menu height */
 }
 
-.ui-tabview-scrollable .ui-tabview-panels {
+.ui-tabview-scroll .ui-tabview-panels {
     overflow: auto;
 }
 
