--- a/client/src/app/admin/tabs/address-tab.component.html
+++ b/client/src/app/admin/tabs/address-tab.component.html
@@ -4,7 +4,7 @@
             <div class="ui-fluid p-md-5">
                 <div class="row">
                     <label>{{Locales.description}}</label>
-                    <p-autoComplete #desc appendTo="body" field="description" [dropdown]="addresses.length > 0"  [(ngModel)]="selectedAddress" [ngModelOptions]="{standalone: true}"  (completeMethod)="filterAddress($event, desc)"></p-autoComplete>
+                    <p-autoComplete #desc appendTo="body" field="description" [dropdown]="addresses.length > 0"  [(ngModel)]="selectedAddress" [ngModelOptions]="{standalone: true}" (completeMethod)="filterAddress($event, desc)"></p-autoComplete>
                 </div>
                 <div class="row" *ngFor="let c of controls">
                     <label *ngIf="c.header">{{c.header}}</label>
@@ -27,9 +27,9 @@
                 </div>
             </div>
             <div class="ui-fluid p-md-6">
-                <div class="row">
+                <div class="row" formGroupName="notes">
                     <label>{{Locales.notes}}</label>
-                    <textarea pInputTextarea [rows]="15"></textarea>
+                    <textarea formControlName="content" pInputTextarea [rows]="15"></textarea>
                 </div>
             </div>
         </form>
