--- a/client/src/app/admin/tabs/address-tab.component.html
+++ b/client/src/app/admin/tabs/address-tab.component.html
@@ -6,30 +6,14 @@
                     <label>{{Locales.description}}</label>
                     <p-autoComplete #desc appendTo="body" field="description" [dropdown]="addresses.length > 0"  [(ngModel)]="selectedAddress" [ngModelOptions]="{standalone: true}" (completeMethod)="filterAddress($event, desc)"></p-autoComplete>
                 </div>
-                <div class="row" *ngFor="let c of controls">
-                    <label *ngIf="c.header">{{c.header}}</label>
-                    <div  *ngIf="c.field=='other' && formGroup.controls.type.value =='Other'">
-                        <label>{{Locales.other}}</label>
-                        <input formControlName="other" pInputText/>
-                    </div>
-                    <div  *ngIf="c.field=='pobox' && formGroup.controls.type.value !='Home'">
-                        <label>{{Locales.pobox}}</label>
-                        <input formControlName="pobox" pInputText/>
-                    </div>
-                    <input *ngIf="c.type =='input'" [formControlName]="c.field" pInputText />
-                    <p-dropdown *ngIf="c.type=='popup'" appendTo="body" [formControlName]="c.field" [options]="c.value" [placeholder]="c.placeholder"></p-dropdown>
-                    <p-autoComplete *ngIf="c.type == 'auto'" ftAutoComplete [formControlName]="c.field" [data]="c.value"></p-autoComplete>
-                    <p-inputMask *ngIf="c.type=='mask'" [mask]="c.value" [placeholder]="c.placeholder" [formControlName]="c.field"></p-inputMask>
-                    <div *ngIf="c.type=='switch'"><p-inputSwitch [formControlName]="c.field" binary="true"></p-inputSwitch></div>
-                    <div *ngIf="f[c.field].errors" style="color: red; ">
-                        <div *ngIf="f[c.field].errors.required ">{{c.header}} is required</div>
-                    </div>
+                <div class="row" *ngFor="let control of controls">
+                    <admin-field [parentGroup]="formGroup" [c]="control"></admin-field>
                 </div>
             </div>
             <div class="ui-fluid p-md-6">
                 <div class="row" formGroupName="notes">
                     <label>{{Locales.notes}}</label>
-                    <textarea formControlName="content" pInputTextarea [rows]="15"></textarea>
+                    <textarea formControlName="content" pInputTextarea [rows]="25"></textarea>
                 </div>
             </div>
         </form>
