--- a/client/src/assets/less/theme.less
+++ b/client/src/assets/less/theme.less
@@ -1483,6 +1483,24 @@ input[type=submit] {
 	}
 }
 
+p-fileupload {
+	position: relative;
+	
+
+	* {
+		cursor: pointer;
+	}
+
+	.ui-fileupload-choose input[type=file] {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		margin: 0;
+		opacity: 0;
+	}
+}
 
 .ui-fluid {
 
