--- a/client/src/app/admin/tabs/address-tab.component.html
+++ b/client/src/app/admin/tabs/address-tab.component.html
@@ -15,7 +15,7 @@
                     <label>{{Locales.notes}}</label>
                     <textarea formControlName="content" pInputTextarea [rows]="25"></textarea>
                 </div>
-                <div class="row" formGroupName="document">
+                <div class="row">
                     <div class="row">
                         <p-fileUpload mode="basic" [auto]="true" url="/document/file/{{user.id}}" name="file" (onBeforeUpload)="loading(true)" (onError)="onUploadDocument($event, true)" (onUpload)="onUploadDocument($event, false)" [chooseLabel]="Locales.documentUpload"></p-fileUpload>
                     </div>
@@ -26,7 +26,7 @@
             </div>
         </form>
         <div class="row footer">
-            <button class="ui-button ui-button-text ui-button-secondary " style="margin-right: 15px" (click)="onReset()">{{Locales.new}}</button>
+            <button *ngIf="addresses.length > 0" class="ui-button ui-button-text ui-button-secondary " style="margin-right: 15px" (click)="onReset()">{{Locales.new}}</button>
             <button *ngIf="addresses.length > 0" class="ui-button ui-button-text " (click)="onDelete()" [disabled]="!selectedBean">{{Locales.delete}}</button>
             <div class="right">
                 <button class="ui-button ui-button-text " (click)="onSubmit()" [disabled]="!myForm.form.valid ">{{Locales.save}}</button>
