--- a/client/src/assets/less/theme.less
+++ b/client/src/assets/less/theme.less
@@ -80,6 +80,14 @@ a {
 	font-size: 1.25em;
 }
 
+.ui-scrollbar-measure {
+	width: 100px;
+	height: 100px;
+	overflow: scroll;
+	position: absolute;
+	top: -9999px
+}
+
 .ui-corner-all {
 	border-radius: 3px;
 }
