--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -48,6 +48,10 @@ app-toast {
     box-shadow: 0 0 3px #f00;
 }
 
+.gap {
+    padding-right: 1rem;
+}
+
 .container {
     overflow-y: auto;
     position: relative;
