--- a/client/src/app/admin/tabs/document-tab.component.html
+++ b/client/src/app/admin/tabs/document-tab.component.html
@@ -1,3 +1,54 @@
-<div>
-    <h1>Documents </h1>
+<form [formGroup]="formGroup" #myForm="ngForm" class="p-grid document">
+    <div class="ui-fluid p-md-5">
+        <p-table [value]="result?.data" [lazy]="true" (onLazyLoad)="lazyLoad($event)" [(selection)]="selectedBean"
+            [paginator]="true" [rows]="25" [totalRecords]="result?.total" [scrollable]="true">
+            <ng-template pTemplate="header">
+                <tr>
+                    <th style="width: 3rem"></th>
+                    <th>{{Locales.type}}</th>
+                    <th style="width: 4rem">{{Locales.page_num}}</th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-doc>
+                <tr>
+                    <td style="width: 3rem">
+                        <p-tableRadioButton [value]="doc"></p-tableRadioButton>
+                    </td>
+                    <td>{{doc.type}}</td>
+                    <td style="width: 4rem">{{doc.pageNumber}}</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage" let-columns>
+                <tr>
+                    <td [attr.colspan]="4" style="text-align: center;">{{Locales.noData}}</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="paginatorright">
+                <div style="margin-right: 10px; margin-top: 5px">
+                {{Locales.total}}: {{result?.total}}
+                </div>
+            </ng-template>
+        </p-table>
+    </div>
+    <div class="ui-fluid p-md-7" style="padding-top: 0">
+        <div *ngFor="let control of controls" [class]="control.class">
+            <admin-field [parentGroup]="formGroup" [c]="control"></admin-field>
+        </div>
+        <div class="row">
+            <p-checkbox [label]="Locales.isFrontSide" binary="true" formControlName="isFrontSide" class="gap"></p-checkbox>
+            <p-checkbox [label]="Locales.isSuspended" binary="true" formControlName="isSuspended" class="gap"></p-checkbox>
+            <p-checkbox [label]="Locales.isWithdrawn" binary="true" formControlName="isWithdrawn"></p-checkbox>
+        </div>
+        <div class="row" *ngIf="selectedBean">
+            <h3>{{Locales.preview}}</h3>
+            <a href="/file/{{user.id}}/{{selectedBean.id}}?token={{token}}" download>{{Locales.download}}</a>
+            <img style="max-width: 100%" src="/file/{{user.id}}/{{selectedBean.id}}?token={{token}}" onerror="this.src='/assets/no-image-available.jpeg';"/>
+        </div>
+    </div>
+</form>
+<div class="row footer">
+    <button class="ui-button ui-button-text " (click)="onDelete()" [disabled]="!selectedBean">{{Locales.delete}}</button>
+    <div class="right">
+        <button class="ui-button ui-button-text " (click)="onSubmit()">{{Locales.save}}</button>
+    </div>
 </div>
