--- a/client/src/app/component/ft-table/ft-table.component.less
+++ b/client/src/app/component/ft-table/ft-table.component.less
@@ -18,7 +18,6 @@ th {
 
 .td-controls .ui-calendar, .td-controls .ui-inputtext {
     height: 33px;
-    display: inline-block;
     width: 100%;
 }
 
@@ -33,6 +32,7 @@ th {
 .p-grid>div {
     margin-bottom: .6em;
     padding: .5em;
+    position: relative;
 }
 
 .filter-radio i:before {
