--- a/client/src/assets/less/layout.less
+++ b/client/src/assets/less/layout.less
@@ -4,6 +4,18 @@
     margin-bottom: 1em;
 }
 
+.inlineL, .inlineR {
+    display: inline-block;
+    width: 50%;
+}
+.inlineL {
+    padding-right: 5px;
+}
+
+.inlineR {
+    padding-left: 5px;
+}
+
 .right {
     float: right;
 }
@@ -81,6 +93,26 @@ input[readonly] {
 
     .p-md-6 {
         width: 50%;
+    }
+
+    .p-md-7 {
+        width: 58.3333%
+    }
+
+    .p-md-8 {
+        width: 66.6667%
+    }
+
+    .p-md-9 {
+        width: 75%
+    }
+
+    .p-md-10 {
+        width: 83.3333%
+    }
+
+    .p-md-11 {
+        width: 91.6667%
     }
 
     .p-md-12 {
