--- a/client/src/app/component/ft-table/ft-table.component.less
+++ b/client/src/app/component/ft-table/ft-table.component.less
@@ -71,3 +71,22 @@ th {
         padding-left: 6px;
     }
 }
+
+.cal-popup-close {
+    border-radius: 100%;
+    background-color: #ea2f49;
+    color: #ffffff;
+    height: 1.538em;
+    line-height: 1.538em;
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-align: center;
+    transition: color 0.2s, background-color 0.2s, box-shadow 0.2s;
+    width: 1.538em;
+}
+
+.cal-popup-close:hover {
+    background-color: #b72439;
+    color: #ffffff;
+}
