--- a/client/src/assets/less/theme.less
+++ b/client/src/assets/less/theme.less
@@ -1525,6 +1525,10 @@ p-fileupload {
 		cursor: pointer;
 	}
 
+	.ui-button.ui-button-text-icon-left .ui-button-text {
+		padding-left: .8em;
+	}
+
 	.ui-fileupload-choose input[type=file] {
 		position: absolute;
 		top: 0;
