--- a/client/src/app/admin/tabs/document-tab.component.html
+++ b/client/src/app/admin/tabs/document-tab.component.html
@@ -2,20 +2,30 @@
     <div class="ui-fluid p-md-5">
         <p-table [value]="result?.data" [lazy]="true" (onLazyLoad)="lazyLoad($event)" [(selection)]="selectedBean"
             [paginator]="true" [rows]="25" [totalRecords]="result?.total" [scrollable]="true">
+            <ng-template pTemplate="colgroup" let-columns>
+                <colgroup>
+                <col [style.width.rem]="6" />
+                <col />
+                <col [style.width.rem]="3" />
+                </colgroup>
+            </ng-template>
             <ng-template pTemplate="header">
                 <tr>
-                    <th style="width: 3rem"></th>
-                    <th>{{Locales.fileName}} / {{Locales.type}}</th>
-                    <th style="width: 4rem">{{Locales.page_num}}</th>
+                    <th>{{Locales.page_num_total}}</th>
+                    <th>{{Locales.type}} / {{Locales.fileName}}</th>
+                    <th></th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-doc>
                 <tr>
-                    <td style="width: 3rem">
+                    <td style="cursor: pointer" (click)="onToggle(doc)" aria-hidden="true">
+                        <span class="pi {{doc.expended ? 'pi-chevron-down' : 'pi-chevron-right'}}" [style.visibility]="doc.total > 1 ? 'visible' : 'hidden'"></span>
+                        {{doc.pageNumber}}<span *ngIf="!doc.parentId"> / {{doc.total}}</span>
+                    </td>
+                    <td *ngIf="!doc.parent"><b>{{getType(doc.type)}}</b><br>{{doc.fileName}}</td>
+                    <td>
                         <p-tableRadioButton [value]="doc"></p-tableRadioButton>
                     </td>
-                    <td *ngIf="!doc.parent"><b>{{doc.fileName}}</b><br>{{doc.type}}</td>
-                    <td style="width: 4rem">{{doc.pageNumber}}</td>
                 </tr>
             </ng-template>
             <ng-template pTemplate="emptymessage" let-columns>
@@ -32,7 +42,7 @@
     </div>
     <div class="ui-fluid p-md-7" style="padding-top: 0">
         <div *ngFor="let control of controls" [class]="control.class">
-            <admin-field [parentGroup]="formGroup" [c]="control"></admin-field>
+            <admin-field [parentGroup]="formGroup" [c]="control" [templates]="{ path: filePath, url: url }"></admin-field>
         </div>
         <div class="row">
             <p-checkbox [label]="Locales.isFrontSide" binary="true" formControlName="isFrontSide" class="gap"></p-checkbox>
@@ -47,10 +57,22 @@
     </div>
 </form>
 <div class="row footer left">
-    <p-fileUpload [disabled]="!selectedBean" mode="basic" [auto]="true" url="/file/{{user.id}}" name="file" (onBeforeUpload)="loading(true)" (onError)="onUploadDocument($event, true)" (onUpload)="onUploadDocument($event, false)" [chooseLabel]="Locales.uploadNextPage"></p-fileUpload>
-    <button pButton (click)="onDelete()" [label]="Locales.delete" [disabled]="!selectedBean"></button>
+    <p-fileUpload mode="basic" [auto]="true" url="/file/{{user.id}}" name="file" (onBeforeUpload)="loading(true)" (onError)="onNewUploadDocument($event, true)" (onUpload)="onNewUploadDocument($event, false)" [chooseLabel]="Locales.uploadNewDocument"></p-fileUpload>
     <div class="right">
-        <p-fileUpload mode="basic" [auto]="true" url="/file/{{user.id}}" name="file" (onBeforeUpload)="loading(true)" (onError)="onUploadDocument($event, true)" (onUpload)="onUploadDocument($event, false)" [chooseLabel]="Locales.uploadNewDocument"></p-fileUpload>
-        <button pButton (click)="onSubmit()" [label]="Locales.save"></button>
+        <p-fileUpload [disabled]="!selectedBean || selectedBean.parentId" mode="basic" [auto]="true" url="/file/{{user.id}}" name="file" (onBeforeUpload)="loading(true)" (onError)="onNextPageUpload($event, true)" (onUpload)="onNextPageUpload($event, false)" [chooseLabel]="Locales.uploadNextPage"></p-fileUpload>
+        <button pButton (click)="onDelete()" [label]="Locales.delete" [disabled]="!selectedBean"></button>
+        <button pButton (click)="onSubmit()" [label]="Locales.save" [disabled]="!selectedBean || !myForm.form.valid"></button>
     </div>
 </div>
+<ng-template #filePath let-c="control" let-group="formGroup">
+    <div *ngIf="formGroup.controls.filePath.value" [formGroup]="group">
+        <label>{{Locales.path}}</label>
+        <input formControlName="filePath" pInputText [attr.disabled]="true"/>
+    </div>
+</ng-template>
+<ng-template #url let-c="control" let-group="formGroup">
+    <div *ngIf="formGroup.controls.type.value == 'OnlineDocument'" [formGroup]="group">
+        <label>{{Locales.url}}</label>
+        <input formControlName="url" pInputText placeholder="http://www.company.com"/>
+    </div>
+</ng-template>
