--- a/client/src/app/admin/tabs/document-tab.component.html
+++ b/client/src/app/admin/tabs/document-tab.component.html
@@ -13,7 +13,7 @@
                 <tr>
                     <th>{{Locales.page_num_total}}</th>
                     <th>{{Locales.type}} / {{Locales.fileName}}</th>
-                    <th></th>
+                    <th align="center"><i class="pi pi-check"></i></th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-doc>
