--- a/client/src/app/admin/tabs/contact-tab.component.html
+++ b/client/src/app/admin/tabs/contact-tab.component.html
@@ -1,4 +1,64 @@
-<div>
-    <h1>Contacts</h1>
-    <h1>Employers</h1>
+<form [formGroup]="formGroup" #myForm="ngForm" class="p-grid document">
+    <div class="ui-fluid p-md-5">
+        <p-table [value]="result?.data" [lazy]="true" (onLazyLoad)="lazyLoad($event)" [(selection)]="selectedBean"
+            [paginator]="true" [rows]="25" [totalRecords]="result?.total" [scrollable]="true">
+            <ng-template pTemplate="colgroup" let-columns>
+                <colgroup>
+                <col/>
+                <col [style.width.rem]="6" />
+                <col [style.width.rem]="3" />
+                </colgroup>
+            </ng-template>
+            <ng-template pTemplate="header">
+                <tr>
+                    <th>{{Locales.lastname}}, {{Locales.firstname}}</th>
+                    <th>{{Locales.relationship}}</th>
+                    <th align="center"><i class="pi pi-check"></i></th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-contact>
+                <tr>
+                    <td>{{contact.last}}, {{contact.first}}</td>
+                    <td>{{contact.relationship}}</td>
+                    <td>
+                        <p-tableRadioButton [value]="contact"></p-tableRadioButton>
+                    </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage" let-columns>
+                <tr>
+                    <td [attr.colspan]="4" style="text-align: center;">{{Locales.noData}}</td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="paginatorright">
+                <div style="margin-right: 10px; margin-top: 5px">
+                {{Locales.total}}: {{result?.total}}
+                </div>
+            </ng-template>
+        </p-table>
+    </div>
+    <div class="ui-fluid p-md-7" style="padding-top: 0">
+        <div *ngFor="let control of controls" [class]="control.class">
+            <admin-field [parentGroup]="formGroup" [c]="control"></admin-field>
+        </div>
+        <div class="row" formGroupName="notes">
+            <label>{{Locales.notes}}</label>
+            <textarea formControlName="content" pInputTextarea [rows]="5"></textarea>
+        </div>
+        <p class="row">
+            <p-inputSwitch (onChange)="includeAddress($event.checked, formGroup.controls)" [(ngModel)]="showAddress" [ngModelOptions]="{standalone: true}"></p-inputSwitch><span style="display: inline-block; padding: 0 10px 5px; vertical-align: text-bottom;">{{Locales.includeAddress}}</span>
+        </p>
+        <div class="row" *ngIf="showAddress">
+            <div *ngFor="let control of addressControls" [class]="control.class">
+                <admin-field [parentGroup]="formGroup.controls.address" [c]="control"></admin-field>
+            </div>
+        </div>
+    </div>
+</form>
+<div class="row footer left">
+    <button *ngIf="result?.data.length > 0" class="ui-button ui-button-secondary " style="margin-right: 15px" (click)="onReset()">{{Locales.new}}</button>
+    <button *ngIf="result?.data.length > 0" class="ui-button " (click)="onDelete()" [disabled]="!selectedBean">{{Locales.delete}}</button>
+    <div class="right">
+        <button pButton (click)="onSubmit()" [label]="Locales.save" [disabled]="!myForm.form.valid"></button>
+    </div>
 </div>
