--- a/client/src/app/admin/tabs/contact-tab.component.html
+++ b/client/src/app/admin/tabs/contact-tab.component.html
@@ -1,4 +1,21 @@
 <form [formGroup]="formGroup" #myForm="ngForm" class="p-grid document">
+    <div class="ui-fluid p-md-7" style="padding-top: 0">
+        <div *ngFor="let control of controls" [class]="control.class">
+            <admin-field [parentGroup]="formGroup" [c]="control"></admin-field>
+        </div>
+        <div class="row" formGroupName="notes">
+            <label>{{Locales.notes}}</label>
+            <textarea formControlName="content" pInputTextarea [rows]="4"></textarea>
+        </div>
+        <p class="row">
+            <p-inputSwitch (onChange)="includeAddress($event.checked, formGroup.controls)" [(ngModel)]="showAddress" [ngModelOptions]="{standalone: true}"></p-inputSwitch><span style="display: inline-block; padding: 0 10px 5px; vertical-align: text-bottom;">{{Locales.includeAddress}}</span>
+        </p>
+        <div class="row" *ngIf="showAddress">
+            <div *ngFor="let control of addressControls" [class]="control.class">
+                <admin-field [parentGroup]="formGroup.controls.address" [c]="control" [templates]="{ pobox: pobox }"></admin-field>
+            </div>
+        </div>
+    </div>
     <div class="ui-fluid p-md-5">
         <p-table [value]="result?.data" [lazy]="true" (onLazyLoad)="lazyLoad($event)" [(selection)]="selectedBean"
             [paginator]="true" [rows]="25" [totalRecords]="result?.total" [scrollable]="true">
@@ -37,23 +54,6 @@
             </ng-template>
         </p-table>
     </div>
-    <div class="ui-fluid p-md-7" style="padding-top: 0">
-        <div *ngFor="let control of controls" [class]="control.class">
-            <admin-field [parentGroup]="formGroup" [c]="control"></admin-field>
-        </div>
-        <div class="row" formGroupName="notes">
-            <label>{{Locales.notes}}</label>
-            <textarea formControlName="content" pInputTextarea [rows]="5"></textarea>
-        </div>
-        <p class="row">
-            <p-inputSwitch (onChange)="includeAddress($event.checked, formGroup.controls)" [(ngModel)]="showAddress" [ngModelOptions]="{standalone: true}"></p-inputSwitch><span style="display: inline-block; padding: 0 10px 5px; vertical-align: text-bottom;">{{Locales.includeAddress}}</span>
-        </p>
-        <div class="row" *ngIf="showAddress">
-            <div *ngFor="let control of addressControls" [class]="control.class">
-                <admin-field [parentGroup]="formGroup.controls.address" [c]="control"></admin-field>
-            </div>
-        </div>
-    </div>
 </form>
 <div class="row footer left">
     <button *ngIf="result?.data.length > 0" class="ui-button ui-button-secondary " style="margin-right: 15px" (click)="onReset()">{{Locales.new}}</button>
@@ -62,3 +62,9 @@
         <button pButton (click)="onSubmit()" [label]="Locales.save" [disabled]="!myForm.form.valid"></button>
     </div>
 </div>
+<ng-template #pobox let-group="group">
+    <div class="noshadow" *ngIf="group.controls.type.value != 'Home'" [formGroup]="group">
+        <label>{{Locales.pobox}}</label>
+        <input formControlName="pobox" pInputText/>
+    </div>
+</ng-template>
