--- a/client/src/app/admin/admin.component.html
+++ b/client/src/app/admin/admin.component.html
@@ -22,14 +22,16 @@
         <span *ngFor="let label of [Locales.admin, Locales.users]">{{label}}</span>
       </div>
       <ft-table sortField="last" filter="admin-table" [columns]="cols" [result]="result" (onNotify)="eventTableHandler($event)">
-        <ng-template pTemplate="firstHeader"></ng-template>
+        <ng-template pTemplate="firstHeader">
+          <button pButton icon="pi pi-plus-circle" style="border-radius: 50%; font-size: 1.1rem; min-width: 2rem; width: 2rem; height: 2rem; padding: 0" (click)="onAddUser()"></button>
+        </ng-template>
         <ng-template pTemplate="firstColumn" let-rowData="$implicit" *ngIf="AppUtils.isEditorAccess()">
           <fa-icon [icon]="icons.faPencil" (click)="onEdit(rowData)" style="cursor: pointer"></fa-icon>
         </ng-template>
       </ft-table>
-      <ft-dialog width="70" height="60" [path]="[Locales.admin, Locales.users, selectedUser?.first + ' ' + selectedUser?.last]">
-        <ng-template pTemplate="{{Locales.users}}" let-user="item">
-          <user-tab [user]="user" ></user-tab>
+      <ft-dialog width="70" height="60" >
+        <ng-template pTemplate="{{Locales.user}}" let-user="item">
+          <user-tab [user]="user"></user-tab>
         </ng-template>
         <ng-template pTemplate="{{Locales.contacts}}" let-user="item">
           <contact-tab [user]="user"></contact-tab>
@@ -50,5 +52,5 @@
     </div>
   </div>
   <app-footer></app-footer>
-  <p-confirmDialog key="deleteRecord" appendTo="body" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+  <p-confirmDialog key="confDialog" appendTo="body"></p-confirmDialog>
 </div>
