--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="wrap">
     <div class="left-menu">
-      <ft-leftnav link="dashboard"></ft-leftnav>
+      <ft-leftnav></ft-leftnav>
     </div>
     <div class="main">
 
