--- a/client/src/assets/less/constants.less
+++ b/client/src/assets/less/constants.less
@@ -3,3 +3,12 @@
 @left-menu-width: 12rem;
 @menu-close-speed: 0.3s;
 @modal-top: @topbar-height + 1;
+
+.noselect() {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
