--- a/client/src/assets/less/layout.less
+++ b/client/src/assets/less/layout.less
@@ -54,6 +54,8 @@ input[readonly] {
     border: 1px solid #c8c8c8;
     padding: 0.571em 1em;
     font-size: 14px;
+    color: #1c8445;
+    font-weight: bolder;
 
     span:nth-child(1n+2):before {
         content: '\e901';
