--- a/client/src/assets/less/styles.less
+++ b/client/src/assets/less/styles.less
@@ -28,7 +28,7 @@ app-toast {
 }
 
 *[disabled=true] {
-	background: #ccc;
+    background: #ccc;
 }
 
 .green {
@@ -54,6 +54,10 @@ app-toast {
 
 .gap {
     padding-right: 1rem;
+}
+
+.noselect {
+    .noselect();
 }
 
 .container {
