--- a/client/src/app/admin/tabs/account-tab.component.html
+++ b/client/src/app/admin/tabs/account-tab.component.html
@@ -7,14 +7,6 @@
             <label>{{Locales.notes}}</label>
             <textarea formControlName="content" pInputTextarea [rows]="4"></textarea>
         </div>
-        <p class="row">
-            <p-inputSwitch (onChange)="showAddress($event.checked, formGroup.controls)" [(ngModel)]="isAddress" [ngModelOptions]="{standalone: true}"></p-inputSwitch><span style="display: inline-block; padding: 0 10px 5px; vertical-align: text-bottom;">{{Locales.showAddress}}</span>
-        </p>
-        <div class="row" *ngIf="isAddress">
-            <div *ngFor="let control of addressControls" [class]="control.class">
-                <admin-field [parentGroup]="formGroup.controls.address" [c]="control" [templates]="{ pobox: pobox }"></admin-field>
-            </div>
-        </div>
     </div>
     <div class="ui-fluid p-md-5">
         <p-table [value]="result?.data" [lazy]="true" (onLazyLoad)="lazyLoad($event)" [(selection)]="selectedBean"
@@ -22,14 +14,14 @@
             <ng-template pTemplate="colgroup" let-columns>
                 <colgroup>
                 <col/>
-                <col [style.width.rem]="6" />
+                <col [style.width.rem]="4" />
                 <col [style.width.rem]="3" />
                 </colgroup>
             </ng-template>
             <ng-template pTemplate="header">
                 <tr>
-                    <th>{{Locales.lastname}}, {{Locales.firstname}}</th>
-                    <th>{{Locales.relationship}}</th>
+                    <th>{{Locales.accountNumber}}</th>
+                    <th align="center">{{Locales.isActive}}</th>
                     <th align="center"><i class="pi pi-check"></i></th>
                 </tr>
             </ng-template>
