--- a/client/src/app/admin/tabs/user-tab.component.html
+++ b/client/src/app/admin/tabs/user-tab.component.html
@@ -1,92 +1,30 @@
-<form [formGroup]="formGroup" #myForm="ngForm" class="p-grid document">
+<form [formGroup]="formGroup" #myForm="ngForm" class="p-grid">
     <div class="ui-fluid p-md-7" style="padding-top: 0">
         <div *ngFor="let control of controls" [class]="control.class">
             <admin-field [parentGroup]="formGroup" [c]="control"></admin-field>
         </div>
-        <div class="row" formGroupName="notes">
-            <label>{{Locales.notes}}</label>
-            <textarea formControlName="content" pInputTextarea [rows]="4"></textarea>
-        </div>
         <p class="row">
-            <p-inputSwitch (onChange)="includeAddress($event.checked, formGroup.controls)" [(ngModel)]="showAddress" [ngModelOptions]="{standalone: true}"></p-inputSwitch><span style="display: inline-block; padding: 0 10px 5px; vertical-align: text-bottom;">{{Locales.includeAddress}}</span>
+            <p-inputSwitch (onChange)="showAddress($event.checked, formGroup.controls)" [(ngModel)]="isAddress" [ngModelOptions]="{standalone: true}"></p-inputSwitch><span style="display: inline-block; padding: 0 10px 5px; vertical-align: text-bottom;">{{Locales.showAddress}}</span>
         </p>
-        <div class="row" *ngIf="showAddress">
+        <div class="row" *ngIf="isAddress">
             <div *ngFor="let control of addressControls" [class]="control.class">
                 <admin-field [parentGroup]="formGroup.controls.address" [c]="control" [templates]="{ pobox: pobox }"></admin-field>
             </div>
         </div>
     </div>
     <div class="ui-fluid p-md-5">
-        <p-table [value]="accounts" [lazy]="true" (onLazyLoad)="lazyLoad()" dataKey="id">
-            <ng-template pTemplate="colgroup" let-columns>
-                <colgroup>
-                <col [style.width.rem]="3" />
-                <col />
-                <col [style.width.rem]="3" />
-                </colgroup>
-            </ng-template>
-            <ng-template pTemplate="header">
-                <tr>
-                    <th align="center"><fa-icon [icon]="icons.faPencil"></fa-icon></th>
-                    <th>{{Locales.accountNumber}}</th>
-                    <th>{{Locales.isActive}}</th>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-account let-expanded="expanded">
-                <tr>
-                    <td>
-                        <span [pRowToggler]="account" class="pi {{expanded ? 'pi-chevron-down' : 'pi-chevron-right'}}"></span>
-                    </td>
-                    <td>{{account.relationship}}</td>
-                    <td>
-                        <p-tableRadioButton [value]="account"></p-tableRadioButton>
-                    </td>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="emptymessage" let-columns>
-                <tr>
-                    <td [attr.colspan]="3" style="text-align: center;">{{Locales.noData}}</td>
-                </tr>
-            </ng-template>
-            <ng-template pTemplate="rowexpansion" let-product>
-                <tr>
-                    <td colspan="3">
-                        <div class="p-p-3">
-                            <p-table [value]="product.orders" dataKey="id">
-                                <ng-template pTemplate="header">
-                                    <tr>
-                                        <th pSortableColumn="id">Id <p-sortIcon field="price"></p-sortIcon></th>
-                                        <th pSortableColumn="customer">Customer <p-sortIcon field="customer"></p-sortIcon></th>
-                                        <th pSortableColumn="date">Date <p-sortIcon field="date"></p-sortIcon></th>
-                                        <th pSortableColumn="amount">Amount <p-sortIcon field="amount"></p-sortIcon></th>
-                                        <th pSortableColumn="stats">Status <p-sortIcon field="status"></p-sortIcon></th>
-                                        <th style="width: 4rem"></th>
-                                    </tr>
-                                </ng-template>
-                                <ng-template pTemplate="body" let-order>
-                                    <tr>
-                                        <td>{{order.id}}</td>
-                                        <td>{{order.customer}}</td>
-                                        <td>{{order.id}}</td>
-                                        <td>{{order.amount | currency:'USD'}}</td>
-                                        <td><span [class]="'order-badge order-' + order.status.toLowerCase()">{{order.status}}</span></td>
-                                        <td><p-button type="button" icon="pi pi-search"></p-button></td>
-                                    </tr>
-                                </ng-template>
-                            </p-table>
-                        </div>
-                    </td>
-                </tr>
-            </ng-template>
-        </p-table>
+        <div class="row" formGroupName="notes">
+            <label>{{Locales.notes}}</label>
+            <textarea formControlName="content" pInputTextarea [rows]="11"></textarea>
+        </div>
         <div class="row" *ngIf="selectedBean?.document as doc">
-            <div *ngIf="doc.id">
+            <div *ngIf="doc.id && doc.fileName">
                 <h3>{{Locales.preview}}</h3>
-                <img style="max-width: 100%" src="/file/{{user.id}}/{{doc.id}}?token={{token}}" onerror="this.src='/assets/no-image-available.jpeg';"/>
+                <img style="max-width: 100%" src="{{baseURL}}/file/{{user.id}}/{{doc.id}}?token={{token}}" onerror="this.src='assets/no-image-available.jpeg';"/>
             </div>
-            <div class="row" style="margin-top: 20px">
+            <div *ngIf="doc.fileName" class="row" style="margin-top: 20px">
                 <button pButton icon="pi pi-times" style="padding: 0; font-size: 9px;" (click)="deleteDocument(doc)"></button>&nbsp;&nbsp;
-                <a href="/file/{{user.id}}/{{doc.id}}?token={{token}}" download>{{Locales.download}}</a>&nbsp;&nbsp;
+                <a href="{{baseURL}}/file/{{user.id}}/{{doc.id}}?token={{token}}" download>{{Locales.download}}</a>&nbsp;&nbsp;
                 <b>{{doc.fileName}}</b> - {{doc.size}} bytes
             </div>
         </div>
