--- a/client/src/app/component/ft-menu/ft-menu.component.less
+++ b/client/src/app/component/ft-menu/ft-menu.component.less
@@ -1,24 +1,32 @@
-.nav-menu {
-    padding: 15px 0;
+@import '../../../assets/less/constants.less';
+
+.nav-menu, .nav-sub-menu {
+    padding: 0;
     list-style: none;
 
-    li {
-        color: #58666e;
-        padding: 4px;
-        letter-spacing: 0.4px;
-        cursor: pointer;
+    li:focus {
+        box-shadow: none;
     }
 
-    li:hover {
+    li>div {
+        color: #58666e;
+        padding: 15px 4px;
+        letter-spacing: 0.4px;
+        cursor: pointer;
+        height: 40px;
+        .noselect();
+    }
+
+    li>div:hover {
         background: #f5f7f9;
     }
 
     i, fa-icon {
-        margin: 15px;
         display: inline-block;
+        margin: 0 15px;
     }
 
-    li.selected {
+    li.active {
         border-right: solid 6px #146fd7;
     }
 
@@ -29,4 +37,8 @@
         -ms-transform: rotate(-90deg);
         transform: rotate(-90deg);
     }
+}
+
+.nav-sub-menu  li>div {
+    padding-left: 50px;
 }
